--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <div>
-    <a class="waves-effect waves-light btn" id="scrapeBtn"><i class="material-icons left"></i>Scrape Article</a>
+    <a class="waves-effect waves-light btn" id="scrapeBtn">Scrape Article</a>
 </div>
 
 <br>
