add scrapper logic work

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,14 @@
-<div>
-    <a class="waves-effect waves-light btn" id="scrapeBtn">Scrape Article</a>
+<div class="container center-align">
+    <div style="margin-bottom: 100px">
+        <a class="waves-effect waves-light btn" id="scrapeBtn">Scrape Article</a>
+    </div>
 </div>
-
 <br>
 
-<div id="displayResults">
+<div class="container" style="margin-bottom:200px">
+
+    <div id="displayResults">
+
+    </div>
 
 </div>
