--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,13 +13,21 @@
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 </head>
 
+<style>
+    h2 {
+        margin-top: 200px;
+    }
+</style>
+
 <body>
     <header>
-    <div class="valign center-block">
-        Mongo News Scrapper
-    </div>
+        <div class="container">
+            <div class="center-align">
+                <h2>Mongo News Scrapper</h2>
+            </div>
+        </div>
 
-</header>
+    </header>
     {{{ body }}}
 </body>
 
