--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,3 +1,5 @@
-<div class="container center-align">
-    Saved Articles
+<div class="container">
+    <div class="center-align">
+        <h2>Saved Articles</h2>
+    </div>
 </div>
