add CR and next need to add UD

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,27 +1,34 @@
-<div style="background: url('./assets/images/bg-city.jpeg'); height: 30em; margin-top: -35px">
-<div class="container">
-    <div class="left-align">
-        <h2 style="font-family: 'Allura', cursive;">Mongo News Scrapper</h2>
-    </div>
+<div>
+    {{!-- <div class="parallax"> --}}
+        {{!-- <img src="./assets/images/bg-city.jpeg" style="z-index: -1; height: 5em; margin-top: 0px; background-position-y: 25%;"> --}}
+        <div style="background: url('./assets/images/bg-city.jpeg'); height: 41em; margin-top: -35px">
+            <div class="container">
+                <div class="left-align text-white">
+                    <h2 style="font-family: 'Allura', cursive;">Mongo News Scrapper</h2>
+                </div>
 
 
-    <div class="left-align">
-        <div style="margin-bottom: 100px">
-            <a class="waves-effect waves-light btn" id="scrapeBtn"><span style="font-family: 'Allura', cursive; font-size: 30px;">S</span>rape Article</a>
+                <div class="left-align">
+                    <div style="margin-bottom: 100px">
+                        <a class="waves-effect waves-light btn" id="scrapeBtn"><span style="font-family: 'Allura', cursive; font-size: 30px;"></span>srape
+                            Article</a>
+                    </div>
+                </div>
+            </div>
+            <br>
+        </div>
+    {{!-- </div> --}}
+</div>
+
+<div class="section white">
+
+    <div class="row container" style="margin-bottom:100px; margin-top: 50px">
+
+        <div class="center-align" id="noArticleNotice">
+            <h5 class="red-text text-lighten-2">No Articles Found Yet, Click "Scrape Article"</h5>
+        </div>
+
+        <div id="displayResults">
         </div>
     </div>
-</div>
-<br>
-
-</div>
-
-<div class="container" style="margin-bottom:200px; margin-top: 50px">
-
-    <div class="center-align" id="noArticleNotice">
-        <h5 class="red-text text-lighten-2">No Articles Found Yet, Click "Scrape Article"</h5>
-    </div>
-
-    <div id="displayResults">
-    </div>
-
 </div>
