--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,8 +16,14 @@
 </head>
 
 <style>
+    body {
+        display: flex;
+        min-height: 100vh;
+        flex-direction: column;
+    }
+
     h2 {
-      padding-top: 100px;
+        padding-top: 100px;
     }
 </style>
 
@@ -39,7 +45,44 @@
     {{{ body }}}
 </body>
 
-<footer>
+<footer class="page-footer teal lighten-1">
+
+    <div class="container">
+        <div class="row">
+            <div class="col l9 s12">
+                <h6 class="white-text"> <strong>S</strong>crape, <strong>S</strong>ave And <strong>C</strong>omment Articles</h6>
+                <hr style="opacity: 0.3">
+ 
+                        <p class="grey-text text-lighten-4"><i>> Everybody walks past a thousand story ideas every day.
+                                The good
+                                writers are the ones who see five or six of them. Most people don’t see any.
+                                - <strong>Orson Scott</strong> (an American Novelist)</i></p>
+     
+
+                        <p class="grey-text text-lighten-4"><i>> So what are you waiting for? Start Scraping and
+                                Commenting!!!
+                                - <strong>Binh (Cindy) Lam</strong> (a Web Developer)</i></p>
+    
+            </div>
+            <div class="col l1 offset-l2 s12">
+                {{!-- <h5 class="white-text">Links</h5>
+                <ul>
+                    <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                    <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                    <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                    <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                </ul> --}}
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright">
+        <div class="container">
+            © 2018 Copyright BC Lam Portfolio
+            <a class="grey-text text-lighten-4 right" href="https://github.com/ngl4">Link to Github</a>
+        </div>
+    </div>
+
+
 
 </footer>
 
