--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -20,6 +20,9 @@
         {{!-- </div> --}}
 </div>
 
+<div id="modal"></div>
+
+
 <div class="section white">
 
     <div class="row container" style="margin-bottom:100px; margin-top: 50px">
@@ -42,7 +45,7 @@
                         </tr>
                     </thead>
 
-
+                    <div ></div>
 
                     <tbody id="savedResults">
                         {{!-- {{#each savedArticles}}
@@ -57,6 +60,7 @@
 
                         
                     </tbody>
+
 
                 </table>
             </div>
