edit saved page

--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -28,12 +28,12 @@
     <div class="row container" style="margin-bottom:100px; margin-top: 50px">
 
         {{!-- Show no articles notice when there are no articles --}}
-        {{!-- <div class="center-align" id="noSavedArticleNotice" style="display: none">
+        <div class="center-align" id="noSavedArticleNotice" style="display: none">
             <h5 class="red-text text-lighten-2">No Articles Saved</h5>
-        </div> --}}
+        </div>
 
-        <div id="displaySavedResults" style="display: block">
-            <div class="card-panel white row">
+        <div id="displaySavedResults" style="display: none">
+            <div class="card-panel white row" >
                 <table>
                     <thead>
                         <tr>
